# todo-svc

./: .env  .gitmodules  Cargo.toml  README.md  build.rs
.sqlx/: query-1cdbed0dba8bb015431fa0d5275d966fe7c67a58720c7ecda7d1618b46ad53a6.json  query-d69aea5248f5807f8bfff370eceaeffd1176b86c986c8bf46d1722ba19b316e1.json
migrations/: 20250512081532_create_todos_table.down.sql  20250512081532_create_todos_table.up.sql
src/: lib.rs  main.rs
src/data/: db.rs  mod.rs  model.rs  repository.rs
src/dto/: todo.rs
