[package]
name = "todo-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "chrono", "uuid" ] }
serde = "1.0.219"
config = "0.15.11"
arc-swap = "1.7.1"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
prost-types = "0.13.5"

[build-dependencies]
tonic-build = "0.13"